Sitio al aire utilizando la Firebase, el link es: ecollective1.web.app

--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Casita
+      Ya estamos en línea!
     </ion-title>
   </ion-toolbar>
 </ion-header>
