Ahora modifique la direccion en firebase, lo anterior estaba dándome complicaciones

--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Ya estamos en línea!
+      Finalmente estamos en línea!
     </ion-title>
   </ion-toolbar>
 </ion-header>
