Daba error cuando se querian actualizar las paginas en firebase, he cambiado el archivo firebase.json Con un redirects

--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Finalmente estamos en línea!
+      Finalmente estamos en línea, probemos los cambios de forma local
     </ion-title>
   </ion-toolbar>
 </ion-header>
