--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -9,18 +9,37 @@
             E-Collective
         </ion-title>
         <ion-searchbar slot = "start" placeholder="Buscar teléfonos celulares..."></ion-searchbar> 
-        <ion-button slot="end" fill="clear">
-          <ion-icon slot="icon-only" name="cart" shape="round" color="light"></ion-icon>
-        </ion-button> 
+        <ion-button slot="end" fill="clear" (click)= "abrirCarrito()" #carro>
+          <div class = "cart-lenght"> {{contadorItems | async}} </div>
+          <ion-icon name = "cart" class = "cart-icon"></ion-icon>        </ion-button> 
       </ion-toolbar>
       </ion-header>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-app>
-    
-  </ion-app>
+
+  <ion-list>
+    <ion-card *ngFor= "let producto of productos">
+      <ion-card-header>
+        <ion-card-title> {{producto.nombre}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-row class="ion-align-items-center">
+          <ion-col size="8">
+            <ion-label color = "secondary">
+              <b>{{ producto.precio | currency:'₡' }}</b>
+            </ion-label>
+          </ion-col>
+          <ion-col size = "4" class = "ion-align-right">
+            <ion-button fill = "clear" (click) = "agregarEnCarrito(producto)">
+              <ion-icon name = "add"></ion-icon>
+            </ion-button>
+          </ion-col>  
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
 </ion-content>
 
 <ion-footer class="ion-no-border">
