--- a/e-collective-front-end/src/app/home/home.page.scss
+++ b/e-collective-front-end/src/app/home/home.page.scss
@@ -21,3 +21,25 @@ ion-content{
 .leftmargin {
   margin-left: 20px;
 }
+
+.cart-icon{
+  font-size: 40px;
+  color: white;
+}
+
+.cart-lenght{
+  color: #050446;
+  position: absolute;
+  top: 8px;
+  left: 2px;
+  font-weight: 600;
+  font-size: 1em;
+  min-width: 25px;
+  z-index: 10;
+}
+
+.cart-modal{
+  --height: 50%;
+  --border-radius: 10px;
+  padding: 25px;
+}
