Se completó página de FAQs

--- a/e-collective-front-end/src/app/about-us/about-us.page.html
+++ b/e-collective-front-end/src/app/about-us/about-us.page.html
@@ -8,6 +8,62 @@
   </ion-toolbar>
 </ion-header>
 
+
+
 <ion-content>
+  <ion-card>
+    <ion-grid>
+    
+      <ion-row class="ion-justify-content-center">
+
+        <ion-col style="align-items: center;">
+            <img class="center" src="../../assets/images/DesarmeElectronicos.png" alt="Desarme Electronicos">
+        </ion-col>
+    
+        <ion-col style="align-items: center;">
+          <img class="center" src="../../assets/images/TrituraciónElectrónicos.jpg" alt="Trituración Electrónicos">
+        </ion-col>
+          
+        <ion-col style="align-items: center;">
+          <img class="center" src="../../assets/images/ReciclajeBaterías.jpg" alt="Reciclaje Baterías">
+        </ion-col>
+
+      </ion-row>
+    
+      <ion-row class="ion-padding">
+        <div align="justify" >
+          <p>
+            La plataforma E-Collective tiene como objetivo dinamizar, agilizar, y facilitar el proceso de venta de dispositivos electrónicos,
+            específicamente teléfonos celulares, por parte de la empresa Fortech y sus talleres asociados, al público general. 
+          </p>
+          <p>
+            Desde hace 25 años, en Fortech nos esforzamos en ayudar a las personas, organizaciones y gobiernos, a proteger y mejorar la vida a través de la 
+            transformación sostenible. Formulamos productos y gestionamos "residuos", procurando un total aprovechamiento de todos los materiales, 
+            desde el principio hasta el final de su vida útil. 
+          </p>
+          <p>
+            Asimismo, ayudamos a que otras organizaciones cierren responsablemente el ciclo de vida de sus productos, asegurándoles así, la menor huella 
+            de carbono posible. Para ello, utilizamos tecnologías de punta y creamos cadenas de custodia y valor para cada recurso que recibimos. Somos 
+            el puente del reciclaje recolector, a la transformación con valor. 
+          </p>
+          <p>
+            Entre los servicios que ofrecemos se encuentra el tratamiento y recuperación de RAEE (Residuos de Aparatos Eléctricos y Electrónicos).
+            E-Collective surge tras identificar una oportunidad de alargar la vida útil de muchos de los dispositivos que llegan con etiqueta de residuos, 
+            pero se encuentran en condiciones aptas (tras un proceso de restauración) para reingresar en el mercado antes de ser reciclados. 
+          </p>
+        </div>
+      </ion-row>
+      <ion-row class="ion-justify-content-center">
+
+        <ion-col style="align-items: center;">
+          <img class="center" style="max-width: 50%; height: auto;" src="../../assets/images/e-collectivee.png" alt="E-collective Logo">
+        </ion-col>
+      </ion-row>
+    
+    </ion-grid>
+
+  </ion-card>
+
+  
 
 </ion-content>
