--- a/e-collective-front-end/src/app/app.component.html
+++ b/e-collective-front-end/src/app/app.component.html
@@ -40,7 +40,7 @@
   
           <ion-menu-toggle>
             <ion-item lines="none" button [routerLink]="['../about-us']"> 
-              <ion-icon name="help-circle-outline" slot="start"></ion-icon>
+              <ion-icon name="information-circle-outline" slot="start"></ion-icon>
               <ion-label>Acerca de Nosotros</ion-label>
             </ion-item>
           </ion-menu-toggle>
@@ -49,13 +49,6 @@
             <ion-item lines="none" button [routerLink]="['../news']"> 
               <ion-icon name="newspaper-outline" slot="start"></ion-icon>
               <ion-label>Noticias</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-  
-          <ion-menu-toggle>
-            <ion-item lines="none" button [routerLink]="['../history']"> 
-              <ion-icon name="business-outline" slot = "start"></ion-icon>
-              <ion-label>Historia de la Empresa</ion-label>
             </ion-item>
           </ion-menu-toggle>
 
