--- a/e-collective-front-end/src/app/home/home.page.scss
+++ b/e-collective-front-end/src/app/home/home.page.scss
@@ -14,8 +14,8 @@ ion-title {
   color: white;
 }
 
-ion-content{
-  --ion-background-color:#f0f0f0;
+ion-content {
+  --background: #f0f0f0; // Replace this with color of your choice
 }
 
 .leftmargin {
