Los objetos estaticos tanto en el menu como en el carrito ya cuenta con imagenes

--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.scss
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.scss
@@ -1,2 +1,18 @@
-
+ion-img{
+display: inline-block;
+height:90px;
+width:100%;
+}
   
+.product-price{
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.item-counter{
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 13px;
+}
