--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -10,39 +10,52 @@
     <ion-list>
       <ion-item *ngFor = "let p of carro" class = "ion-text-wrap">
         <ion-grid>
-          <ion-row class= "ion-align-items-center">
 
-            <ion-col size = "2" class = "ion-align-self-center">
-              <ion-button color="medium" fill ="clear" (click) = "decrementarProducto(p)">
-                <ion-icon name="remove-circle" slot = "icon-only"></ion-icon>
-              </ion-button>
-            </ion-col>
-
-            <ion-col size= "1" class = "ion-align-self-center">
-              {{p.cantidad}}
-            </ion-col>
-
-            <ion-col size="2" class = "ion-align-self-center">
-              <ion-button color = "medium" fill = "clear" (click) = "agregarProducto(p)">
-                <ion-icon name= "add-circle" slot="icon-only"></ion-icon>
-              </ion-button>
-            </ion-col>
-
-            <ion-col size="2" offset="5">
+          <ion-row class = "ion-align-self-end">
+            <ion-col size="1" offset="11">
               <ion-button color="medium" fill = "clear" (click) = "eliminarProducto(p)">
                 <ion-icon name = "close-circle" slot= "icon-only"></ion-icon>
               </ion-button>
             </ion-col>
           </ion-row>
+                    
+          <ion-row>
 
-          <ion-row class= "ion-align-items-center">
-            <ion-col size = "9" class = "ion-align-self-center">
-              <b>{{p.nombre}}</b>
+            <ion-col size = "3">
+              <ion-img [src] = "p.imgUrl"> </ion-img>
             </ion-col>
-            <ion-col size="3" class = "ion-text-end">
+
+            <ion-col size = "6" class = "ion-align-self-center">
+              <b>{{p.nombre}}</b> <br>
+              <i>Mini descripción</i>
+            </ion-col>
+
+            <ion-col size="3" class = "ion-align-self-center">
               {{ p.cantidad * p.precio | currency:'₡' }}
             </ion-col>
+
           </ion-row>
+
+          <ion-row>
+
+            <ion-col size = "1" class = "ion-align-self-center">
+              <ion-button color="medium" fill ="clear" (click) = "decrementarProducto(p)">
+                <ion-icon name="remove-circle" slot = "icon-only"></ion-icon>
+              </ion-button>
+            </ion-col>
+          
+            <ion-col size= "1" class = "item-counter">
+              {{p.cantidad}}
+            </ion-col>
+
+            <ion-col size="1" class = "ion-align-self-center">
+              <ion-button color = "medium" fill = "clear" (click) = "agregarProducto(p)">
+                <ion-icon name= "add-circle" slot="icon-only"></ion-icon>
+              </ion-button>
+            </ion-col>
+
+          </ion-row>
+
         </ion-grid>
 
       </ion-item>
