--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -19,25 +19,28 @@
 
 <ion-content>
 
-  <ion-list>
+  <ion-list class="horizontal-cards">
     <ion-card *ngFor= "let producto of productos">
       <ion-card-header>
-        <ion-card-title> {{producto.nombre}}</ion-card-title>
+        <ion-img [src] = "producto.imgUrl"> </ion-img>
+        <ion-card-title class = "ion-text-center"> {{producto.nombre}}</ion-card-title>
       </ion-card-header>
+
       <ion-card-content>
         <ion-row class="ion-align-items-center">
-          <ion-col size="8">
-            <ion-label color = "secondary">
+          <ion-col size="10">
+            <ion-label color = "black">
               <b>{{ producto.precio | currency:'₡' }}</b>
             </ion-label>
           </ion-col>
-          <ion-col size = "4" class = "ion-align-right">
+          <ion-col size = "2" class = "ion-align-right">
             <ion-button fill = "clear" (click) = "agregarEnCarrito(producto)">
-              <ion-icon name = "add"></ion-icon>
+              <ion-icon name = "add" class = "add-product"></ion-icon>
             </ion-button>
           </ion-col>  
         </ion-row>
       </ion-card-content>
+
     </ion-card>
   </ion-list>
 </ion-content>
