--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -27,7 +27,7 @@
 
           <ion-row class = "ion-align-self-end">
             <ion-col size="1" offset="11">
-              <ion-button color="medium" fill = "clear" (click) = "eliminarProducto(p)">
+              <ion-button color="medium" fill = "clear" (click) = "removerItem(p)">
                 <ion-icon name = "close-circle" slot= "icon-only"></ion-icon>
               </ion-button>
             </ion-col>
@@ -63,7 +63,7 @@
             </ion-col>
 
             <ion-col size="1" class = "ion-align-self-center">
-              <ion-button color = "medium" fill = "clear" (click) = "agregarProducto(p)">
+              <ion-button color = "medium" fill = "clear" (click) = "incrementarProducto(p)">
                 <ion-icon name= "add-circle" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
