--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -24,22 +24,30 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <div style="padding-left: 100px; padding-right: 100px; margin:auto;">
+
     <ion-grid>
-      <ion-col>
-        <ion-card>
+      <ion-row>
+        <ion-col size-xl="3" size-md="6" size-xs="12" *ngFor="let device of devices">
+          <ion-card>
 
-          <ion-label>
-            Test
-          </ion-label>
-          <ion-button>Añadir al carrito</ion-button>
-        </ion-card>
+            
+            <ion-card-header>
+              <div style="display: flex; align-items: center; justify-content: center;">
+                <img class="deviceImage" [src]="device.photoURL" />
+              </div>
+              <ion-card-title>{{device.name}} {{device.model}}</ion-card-title>
+              <ion-label><b>₡ {{device.price}} c/IVA</b></ion-label>
+            </ion-card-header>
+            <ion-card-content>
 
-      </ion-col>
+              <ion-button mode="ios" expand="block">
+                <ion-icon name="cart" style="margin-right: 15px;"></ion-icon> Añadir al carrito
+              </ion-button> 
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
     </ion-grid>
-
-
-  </div>
 
 
 </ion-content>
