--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -8,7 +8,6 @@
         <ion-title slot="start">           
             E-Collective
         </ion-title>
-<<<<<<< HEAD
         <ion-searchbar slot = "start" placeholder="Buscar teléfonos celulares..."></ion-searchbar>
         <ion-button mode="ios" fill="clear">
           <ion-label color="light">Iniciar sesión</ion-label>
@@ -16,40 +15,38 @@
         <ion-button mode="ios" fill="clear">
           <ion-label color="light">Registrarse</ion-label>
         </ion-button>
-        <ion-button slot="end" fill="clear">
-          <ion-icon slot="icon-only" name="cart" shape="round" color="light"></ion-icon>
-        </ion-button> 
-=======
-        <ion-searchbar slot = "start" placeholder="Buscar teléfonos celulares..."></ion-searchbar> 
         <ion-button slot="end" fill="clear" (click)= "abrirCarrito()" #carro>
           <div class = "cart-lenght"> {{contadorItems | async}} </div>
-          <ion-icon name = "cart" class = "cart-icon"></ion-icon>        </ion-button> 
->>>>>>> d4ce0b0bb991cd0b26945be245a4141ae245d22a
+          <ion-icon name = "cart" class = "cart-icon"></ion-icon>        
+        </ion-button> 
       </ion-toolbar>
       </ion-header>
   </ion-toolbar>
 </ion-header>
 
-<<<<<<< HEAD
 <ion-content class="ion-padding">
 
     <ion-grid>
       <ion-row>
-        <ion-col size-xl="3" size-md="6" size-xs="12" *ngFor="let device of devices">
+        <ion-col size-xl="3" size-md="6" size-xs="12" *ngFor="let producto of productos">
           <ion-card>
 
             
             <ion-card-header>
               <div style="display: flex; align-items: center; justify-content: center;">
-                <img class="deviceImage" [src]="device.photoURL" />
+
+              <img class="deviceImage" [src]="producto.imgUrl" />
+
+
+                
               </div>
-              <ion-card-title>{{device.name}} {{device.model}}</ion-card-title>
-              <ion-label><b>₡ {{device.price}} c/IVA</b></ion-label>
+              <ion-card-title>{{producto.nombre}} {{producto.modelo}}</ion-card-title>
+              <ion-label><b>₡ {{producto.precio}} c/IVA</b></ion-label>
             </ion-card-header>
             <ion-card-content>
 
-              <ion-button mode="ios" expand="block">
-                <ion-icon name="cart" style="margin-right: 15px;"></ion-icon> Añadir al carrito
+              <ion-button mode="ios" expand="block" (click)="agregarEnCarrito(producto)">
+                <ion-icon name="cart" style="margin-right: 15px;"></ion-icon> Agregar al carrito
               </ion-button> 
             </ion-card-content>
           </ion-card>
@@ -58,34 +55,6 @@
     </ion-grid>
 
 
-=======
-<ion-content>
-
-  <ion-list class="horizontal-cards">
-    <ion-card *ngFor= "let producto of productos">
-      <ion-card-header>
-        <ion-img [src] = "producto.imgUrl"> </ion-img>
-        <ion-card-title class = "ion-text-center"> {{producto.nombre}}</ion-card-title>
-      </ion-card-header>
-
-      <ion-card-content>
-        <ion-row class="ion-align-items-center">
-          <ion-col size="10">
-            <ion-label color = "black">
-              <b>{{ producto.precio | currency:'₡' }}</b>
-            </ion-label>
-          </ion-col>
-          <ion-col size = "2" class = "ion-align-right">
-            <ion-button fill = "clear" (click) = "agregarEnCarrito(producto)">
-              <ion-icon name = "add" class = "add-product"></ion-icon>
-            </ion-button>
-          </ion-col>  
-        </ion-row>
-      </ion-card-content>
-
-    </ion-card>
-  </ion-list>
->>>>>>> d4ce0b0bb991cd0b26945be245a4141ae245d22a
 </ion-content>
 
 <ion-footer class="ion-no-border">
