--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -9,7 +9,7 @@
             E-Collective
         </ion-title>
         <ion-searchbar slot = "start" placeholder="Buscar teléfonos celulares..."></ion-searchbar>
-        <ion-button mode="ios" fill="clear">
+        <ion-button mode="ios" fill="clear" (click)= "onClickLogin()">
           <ion-label color="light">Iniciar sesión</ion-label>
         </ion-button>
         <ion-button mode="ios" fill="clear">
