--- a/e-collective-front-end/src/app/locations/locations.page.html
+++ b/e-collective-front-end/src/app/locations/locations.page.html
@@ -1,8 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button color="light" defaultHref="/"></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    
+    <ion-button mode="ios" fill="clear" slot="end" href="/home">
+      <ion-label color="light">E - Collective</ion-label>
+    </ion-button>
 
     <ion-title>Ubicaciones</ion-title>
   </ion-toolbar>
