--- a/e-collective-front-end/src/app/faq/faq.page.html
+++ b/e-collective-front-end/src/app/faq/faq.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons color="light" slot="start">
-      <ion-back-button color="light" defaultHref="/"></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
-
+    <ion-button mode="ios" fill="clear" slot="end" href="/home">
+      <ion-label color="light">E - Collective</ion-label>
+    </ion-button>
+    
     <ion-title>Preguntas frecuentes</ion-title>
   </ion-toolbar>
 </ion-header>
