[2-Frontend-3] Se completó la pantalla de registro de usuario

--- a/e-collective-front-end/src/app/login/login.page.html
+++ b/e-collective-front-end/src/app/login/login.page.html
@@ -1,10 +1,12 @@
-<ion-content class="centered">
+<ion-content class="ion-padding">
 
-  <ion-img class="logo-image" src="assets/images/e-collective.png"></ion-img>
+  <a routerLink="">
+    <ion-img class="logo-image" src="assets/images/e-collective.png"></ion-img>
+  </a>
 
   <ion-card >
     <ion-card-header lines="none">
-      <ion-card-title>Iniciar sesión</ion-card-title>
+      <ion-card-title class="ion-text-center">Iniciar sesión</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item>
@@ -22,16 +24,16 @@
         </ion-label>
         <ion-input type="password" [(ngModel)]="inputPassword" (keydown.enter)="onClickLogin()"></ion-input>
       </ion-item>
-
+      
       <ion-button mode="ios" expand="full" class="top-margin" (click)="onClickLogin()">Iniciar sesión</ion-button>
 
 <!--       <ion-button fill="clear" expand="full" mode="ios">
         <ion-label>Olvidé mi contraseña</ion-label>
       </ion-button> -->
 
-      <h3 class="top-margin">¿Eres nuevo en E-Collective?</h3>
+      <h3 class="top-margin" style="color: black">¿Eres nuevo en E-Collective?</h3>
 
-      <ion-button fill="clear" mode="ios" expand="full" (click)="onClickRegister()">Crear una cuenta</ion-button>
+      <ion-button fill="clear" mode="ios" expand="full" (click)="onClickRegister()">Registrarme</ion-button>
 
     </ion-card-content>
 
