--- a/e-collective-front-end/src/app/login/login.page.scss
+++ b/e-collective-front-end/src/app/login/login.page.scss
@@ -1,14 +1,25 @@
 .logo-image {
     width: 30%;
-    height: 30%;
+    height: auto;
     margin: auto;
+    padding-bottom: 20px;
+}
+// Para dispositivos pequeños, hice el logo un poco mas grande. 
+@media (max-width: 479px) {
+    .logo-image {
+        width: 50%;
+        height: auto;
+        margin: auto;
+        padding-bottom: 20px;
+    }
 }
 
-  ion-content {
+ion-content {
     margin-left:auto;
     margin-right:auto;
     text-align:center;
-  }
+    --background: #f0f0f0; // Replace this with color of your choice
+}
 
   
 ion-card {
@@ -19,19 +30,6 @@ ion-card {
 .top-margin {
     margin-top: 20px;
 }
-
-
-
-
-.centered {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-}
-
-
 
 .iconPadding {
     padding-right: 5px;
