--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -27,7 +27,7 @@
 
           <ion-row class = "ion-align-self-end">
             <ion-col size="1" offset="11">
-              <ion-button color="medium" fill = "clear" (click) = "removerItem(p)">
+              <ion-button color="medium" fill = "clear" (click) = "deleteProduct(p)">
                 <ion-icon name = "close-circle" slot= "icon-only"></ion-icon>
               </ion-button>
             </ion-col>
@@ -40,12 +40,12 @@
             </ion-col>
 
             <ion-col size = "6" class = "ion-align-self-center">
-              <b>{{p.nombre}} {{p.modelo}}</b> <br>
+              <b>{{p.name}} {{p.model}}</b> <br>
               <i>Mini descripción</i>
             </ion-col>
 
             <ion-col size="3" class = "ion-align-self-center">
-              {{ p.cantidad * p.precio | currency:'₡' }}
+              {{ p.quantity * p.price | currency:'₡' }}
             </ion-col>
 
           </ion-row>
@@ -53,17 +53,17 @@
           <ion-row>
 
             <ion-col size = "1" class = "ion-align-self-center">
-              <ion-button color="medium" fill ="clear" (click) = "decrementarProducto(p)">
+              <ion-button color="medium" fill ="clear" (click) = "decreaseProduct(p)">
                 <ion-icon name="remove-circle" slot = "icon-only"></ion-icon>
               </ion-button>
             </ion-col>
           
             <ion-col size= "1" class = "item-counter">
-              {{p.cantidad}}
+              {{p.quantity}}
             </ion-col>
 
             <ion-col size="1" class = "ion-align-self-center">
-              <ion-button color = "medium" fill = "clear" (click) = "incrementarProducto(p)">
+              <ion-button color = "medium" fill = "clear" (click) = "increaseProduct(p)">
                 <ion-icon name= "add-circle" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
@@ -80,7 +80,7 @@
               Total:
             </ion-col>
             <ion-col size = "3" class = "ion-text-end">
-              {{ obtenerTotal() | currency: '₡' }}
+              {{ getTotal() | currency: '₡' }}
             </ion-col>
           </ion-row>
         </ion-grid>
