--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -12,7 +12,7 @@
         <ion-button mode="ios" fill="clear" (click)= "onClickLogin()">
           <ion-label color="light">Iniciar sesión</ion-label>
         </ion-button>
-        <ion-button mode="ios" fill="clear">
+        <ion-button mode="ios" fill="clear" (click) = "onClickRegister()">
           <ion-label color="light">Registrarse</ion-label>
         </ion-button>
         <ion-button slot="end" fill="clear" (click)= "abrirCarrito()" #carro>
