[2-BackEnd-4]: Se avanza el backend en cuanto a los modelos de datos y algunas rutinas con la base de datos.
[2-FrontEnd-7]: Avance considerable en las tres secciones que posee la seccion administrativa, tanto backend como frontend

--- a/e-collective-front-end/src/app/app.component.html
+++ b/e-collective-front-end/src/app/app.component.html
@@ -73,10 +73,10 @@
             </ion-item>
           </ion-menu-toggle>
           
-          <div *ngIf = "user && user.email == admin">
+          <div *ngIf = "user && (user.rol == 1 || user.rol == 2)">
 
             <ion-menu-toggle>
-              <ion-item lines="none" button [routerLink]="['../faq']"> 
+              <ion-item lines="none" button [routerLink]="['../admin-user']"> 
                 <ion-icon name="bar-chart-outline" slot = "start"></ion-icon>
                 <ion-label>Administrar</ion-label>
               </ion-item>
