--- a/e-collective-front-end/src/app/register/register.page.html
+++ b/e-collective-front-end/src/app/register/register.page.html
@@ -4,12 +4,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="container">
 
   <ion-card >
     <ion-card-header lines="none">
       <ion-card-title class="ion-text-center">Registrar usuario</ion-card-title>
     </ion-card-header>
+
     <ion-card-content>
       <div class="ion-text-center">
         <ion-title size="small" color="dark">Foto de perfil</ion-title>
