--- a/e-collective-front-end/src/global.scss
+++ b/e-collective-front-end/src/global.scss
@@ -26,6 +26,9 @@
 @import "~@ionic/angular/css/flex-utils.css";
 @import "~animate.css/animate.min.css";
 
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+
 .cart-modal{
     --height: 50%;
     --border-radius: 10px;
