--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -37,11 +37,24 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-
-
-
-    <ion-grid>
+<ion-content>     
+  
+  <div >
+    <owl-carousel-o [options]="customOptions" >
+      
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
+    
+    </owl-carousel-o>
+  </div>
+  
+  
+  <ion-grid>
       <ion-row>
         <ion-col size-xl="3" size-md="6" size-xs="12" *ngFor="let producto of productos">
           <ion-card>
