[2-Backend-4]: Avanzado significativamente, ya están varias rutinas con la base de datos [2-FrontEnd-7]: Está aproximadamente el 85% de la interfaz de este punto,

--- a/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.html
+++ b/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.html
@@ -11,6 +11,8 @@
   </ion-toolbar>
 </ion-header>
 
+
+
 <ion-content>
 
   <ion-grid>
@@ -18,53 +20,75 @@
 
       <ion-col size-xl="4" size-md="4" size-xs="12" style="left: 5%;" >
 
-        <div>
-          <ion-searchbar slot = "start" placeholder="Ingrese el correo del usuario" (ionChange)="getUser($event)"></ion-searchbar>
-          <ion-button  expand="full" class="ion-margin-top" (click)="getProduct()" mode="ios">Buscar
-            </ion-button>
-          <div *ngIf = "product && searching">
-            <h2>Resultado de la busqueda</h2>
-            <ion-list id='lista-empleados'>
-              <ion-item>
-                <ion-avatar>
-                  <img [src]="product.imgUrl">
-                </ion-avatar>
-                <ion-label style="margin-left: 15px;">
-                  <h3><b>{{product.name}}{{product.model}}</b></h3>
-                  <h3>Breve descripcion</h3>
-                  <h3>{{product.price}}</h3>
-                </ion-label>
-                <ion-buttons>
-                  <ion-button slot="end" fill="clear">
-                    <ion-icon name="search-circle-outline" style="font-size: 40px;" ></ion-icon>       
-                  </ion-button> 
-                </ion-buttons>
-  
-              </ion-item>
-            </ion-list>
-          </div>
+        <ion-card >
 
-        </div>
-        
+          <ion-card-header lines="none">
+            <ion-card-title class="ion-text-center">Buscar usuario</ion-card-title>
+          </ion-card-header>
+
+          <ion-card-content>
+            <div>
+              <form [formGroup]="employeeForm">
+                <ion-list>
+                  
+                  <ion-item>
+                    <ion-label position="floating">Correo del cliente *</ion-label>
+                    <ion-input formControlName="email"></ion-input> 
+                  </ion-item>
+            
+                  <ion-text *ngIf="!employeeForm.get('email').valid && employeeForm.get('email').touched" color="danger">
+                    <p>Es necesario ingresar un correo. </p>
+                  </ion-text>
+  
+                </ion-list>
+                <ion-button  expand="full" class="ion-margin-top" (click)="searchUser()" mode="ios">Buscar
+                </ion-button>
+              </form>
+            </div>
+ 
+            <div *ngIf = "(user | async) && searching">
+              <h2>Resultado de la busqueda</h2>
+              <ion-list id='lista-usuarios'>
+                <ion-item>
+                  <ion-avatar>
+                    <img [src]="user.imageData">
+                  </ion-avatar>
+                  <ion-label style="margin-left: 15px;">
+                    <h3><b>{{user.name}}{{user.email}}</b></h3>
+                    <h3>Breve descripcion</h3>
+                    <h3>{{user.birthdate}}</h3>
+                  </ion-label>
+                  <ion-buttons>
+                    <ion-button slot="end" fill="clear">
+                      <ion-icon name="add-circle-outline"></ion-icon>      
+                    </ion-button> 
+                  </ion-buttons>
+    
+                </ion-item>
+              </ion-list>
+            </div>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
+
       <ion-col size-xl="4" size-md="4" size-xs="12" style="left: 20%;">
 
         <div>
-          <br><br><br><br><br>
+          
           <h2>Lista de empleados</h2>
           <ion-list id='lista-empleados'>
-            <ion-item>
+            <ion-item *ngFor = "let user of users">
               <ion-avatar>
                 <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
               </ion-avatar>
               <ion-label style="margin-left: 15px;">
-                <h3><b>Probando</b></h3>
-                <h3>Probando</h3>
-                <h3>Probando</h3>
+                <h3><b>{{user.name}}</b></h3>
+                <h3>{{user.email}}</h3>
+                <h3>{{user.birthdate}}</h3>
               </ion-label>
               <ion-buttons>
                 <ion-button slot="end" fill="clear">
-                  <ion-icon name="search-circle-outline" style="font-size: 40px;" ></ion-icon>       
+                  <ion-icon name="close-outline"></ion-icon>      
                 </ion-button> 
               </ion-buttons>
 
