--- a/e-collective-front-end/src/app/admin/admin-products/admin-products.page.html
+++ b/e-collective-front-end/src/app/admin/admin-products/admin-products.page.html
@@ -94,39 +94,57 @@
 
       </ion-col>
 
-      
       <ion-col size-xl="4" size-md="4" size-xs="12" >
 
-        <div>
-          <ion-searchbar slot = "start" placeholder="Ingrese el código del producto"></ion-searchbar>
+        <ion-card >
 
-          <ion-button  expand="full" class="ion-margin-top" (click)="getProduct()" mode="ios">Buscar
-            </ion-button>
-          <div *ngIf = "producto && searching">
-            <h2>Resultados de la busqueda</h2>
+          <ion-card-header lines="none">
+            <ion-card-title class="ion-text-center">Buscar producto</ion-card-title>
+          </ion-card-header>
 
-            <ion-list id='lista-productos'>
-              <ion-item>
-                <ion-avatar>
-                  <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-                </ion-avatar>
-                <ion-label style="margin-left: 15px;">
-                  <h3><b>{{product.name}}</b></h3>
-                  <h3>{{product.model}}</h3>
-                  <h3>{{product.price}}</h3>
-                </ion-label>
-                <ion-buttons>
-                  <ion-button slot="end" fill="clear">
-                    <ion-icon name="search-circle-outline" style="font-size: 40px;" ></ion-icon>       
-                  </ion-button> 
-                </ion-buttons>
+          <ion-card-content>
+            <div>
+              <form [formGroup]="searchForm">
+                <ion-list>
+                  
+                  <ion-item>
+                    <ion-label position="floating">Indentificador del producto *</ion-label>
+                    <ion-input formControlName="idProduct"></ion-input> 
+                  </ion-item>
+            
+                  <ion-text *ngIf="!searchForm.get('idProduct').valid && searchForm.get('idProduct').touched" color="danger">
+                    <p>Es necesario ingresar un identificador. </p>
+                  </ion-text>
   
-              </ion-item>
-            </ion-list>
-          </div>
-
-        </div>
-
+                </ion-list>
+                <ion-button  expand="full" class="ion-margin-top" (click)="searchProduct()" mode="ios">Buscar
+                </ion-button>
+              </form>
+            </div>
+ 
+            <div *ngIf = "(product | async) && searching">
+              <h2>Resultado de la busqueda</h2>
+              <ion-list id='lista-productos'>
+                <ion-item>
+                  <ion-avatar>
+                    <img [src]="product.imgUrl">
+                  </ion-avatar>
+                  <ion-label style="margin-left: 15px;">
+                    <h3><b>{{product.name}}{{product.model}}</b></h3>
+                    <h3>Breve descripcion</h3>
+                    <h3>{{product.price}}</h3>
+                  </ion-label>
+                  <ion-buttons>
+                    <ion-button slot="end" fill="clear">
+                      <ion-icon name="add-circle-outline"></ion-icon>      
+                    </ion-button> 
+                  </ion-buttons>
+    
+                </ion-item>
+              </ion-list>
+            </div>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
 
       <ion-col size-xl="4" size-md="4" size-xs="12"  >
@@ -144,8 +162,8 @@
               </ion-label>
               <ion-buttons>
                 <ion-button slot="end" fill="clear">
-                  <ion-icon name="search-circle-outline" style="font-size: 40px;" ></ion-icon>       
-                </ion-button> 
+                  <ion-icon name="build-outline"></ion-icon>                
+              </ion-button> 
               </ion-buttons>
 
             </ion-item>
@@ -153,6 +171,7 @@
         </div>
         
       </ion-col>
+      
 
     </ion-row>
   </ion-grid>
