--- a/e-collective-front-end/src/app/app.component.html
+++ b/e-collective-front-end/src/app/app.component.html
@@ -81,17 +81,17 @@
                 <ion-label>Administrar</ion-label>
               </ion-item>
             </ion-menu-toggle>
+          </div>
 
-
+          <div *ngIf = "user">
             <ion-menu-toggle>
               <ion-item lines="none" button (click)= "onClickLogOut()">
                 <ion-icon color="danger" name="log-out-sharp" slot="start" ></ion-icon>
                 <ion-label color="danger">Cerrar Sesión</ion-label>
               </ion-item>
             </ion-menu-toggle>
-            
-
           </div>
+          
   
         </ion-list>
       </ion-content>
