[2-Frontend-8] Avances en preguntas y respuestas

--- a/e-collective-front-end/src/app/home/home.page.scss
+++ b/e-collective-front-end/src/app/home/home.page.scss
@@ -18,7 +18,24 @@ ion-searchbar {
   max-width: 800px;
 }
 
+ion-card-content {
+  padding-bottom: 0;
+}
 
+ion-footer {
+  max-height: 50px;
+}
+
+.slim {
+  max-height: 50px;
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
+.smallicon {
+  padding-right: 5px;
+  font-size: 18px;
+}
 
 .leftmargin {
   margin-left: 20px;
