--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -38,20 +38,15 @@
 </ion-header>
 
 <ion-content>     
-  
-  <div >
-    <owl-carousel-o [options]="customOptions" >
-      
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-      <ng-template carouselSlide><img src="../../assets/images/Samsung.jpg"></ng-template>  
-    
-    </owl-carousel-o>
-  </div>
+  <owl-carousel-o [options]="customOptions"> 
+    <ng-container *ngFor="let item of productos">
+      <ng-template carouselSlide>
+        <div class="slider">
+          <a [owlRouterLink]="['/present']">{{item.name}}</a>
+        </div>
+      </ng-template>
+    </ng-container>
+  </owl-carousel-o>
   
   
   <ion-grid>
