--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -38,15 +38,14 @@
 </ion-header>
 
 <ion-content>     
-  <owl-carousel-o [options]="customOptions"> 
-    <ng-container *ngFor="let item of productos">
-      <ng-template carouselSlide>
-        <div class="slider">
-          <a [owlRouterLink]="['/present']">{{item.name}}</a>
-        </div>
-      </ng-template>
-    </ng-container>
+  
+  <div>Some tags before</div>
+  <owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide>Slide 1</ng-template>  
+    <ng-template carouselSlide>Slide 2</ng-template>  
+    <ng-template carouselSlide>Slide 3</ng-template>  
   </owl-carousel-o>
+  <div>Some tags after</div>
   
   
   <ion-grid>
