--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -39,11 +39,43 @@
 
 <ion-content>     
   
-  <owl-carousel-o [options]="customOptions" *ngFor="let producto of productos"> 
-    <ng-container *ngFor="let producto of productos">
-      <ng-template carouselSlide>
+  <owl-carousel-o [options]="customOptions" *ngIf=" productos.length"> 
+    <ng-container>
+      <ng-template carouselSlide *ngFor="let producto of productos">
         <div class="slider">
-          <img class="deviceImage" [src]="producto.imgUrl" />
+          <ion-card>           
+            <h1 mat-card-title style = "color: green; font-size: 2em; font-style:italic;" > 
+              <b>OFERTA ESPECIAL</b>
+            </h1>
+            <ion-card-header>
+              <div style="display: flex; align-items: center; justify-content: center;">
+
+              <img style ="width: 50%;" class="deviceImage" [src]="producto.imgUrl" />
+                
+              </div>
+              <ion-card-title>{{producto.name}} {{producto.model}}</ion-card-title>
+              <ion-label><b>₡ {{producto.price}} c/IVA</b></ion-label>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-footer>
+                <ion-row>
+                  <ion-col size="6" class="slim">
+                    <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="verDetalles(producto)">
+                      <ion-text><h2><b>Ver detalles</b></h2></ion-text>
+                    </ion-button>
+                  </ion-col>
+                  <ion-col size="6" class="slim">
+                    <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="agregarEnCarrito(producto)">
+                      <ion-text><h2><b>Agregar al carrito</b></h2></ion-text>
+                    </ion-button>
+                  </ion-col>
+                </ion-row>
+              </ion-footer>
+
+            </ion-card-content>
+          </ion-card>
+
+
         </div>
       </ng-template>
     </ng-container>
